--- a/Frontend/getahotel/src/App.css
+++ b/Frontend/getahotel/src/App.css
@@ -1,42 +1,30 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+/* Reset básico */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  color: black;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body, html {
+  font-family: sans-serif;
+    min-height: 100%;
+  background-image: url("https://www.researchgate.net/publication/345316196/figure/fig2/AS:954354005725187@1604547134739/Google-Maps-Traffic-Layer-showing-live-traffic-in-the-Camden-Soho-Marylebone-Mayfair.ppm"); /* la imagen que tengas */
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Contenedor principal con flex */
+.container {
+  display: flex;
+  min-height: 100vh;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+/* Contenido principal */
+main {
+  flex: 1; /* Ocupa el resto del espacio */
+  padding: 20px;
+  background-color: #fff;
 }
