--- a/Frontend/getahotel/src/index.css
+++ b/Frontend/getahotel/src/index.css
@@ -22,12 +22,15 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+/* index.css */
+html, body, #root {
+  height: 100%;
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+}
+
+body {
+  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  /* elimina display:flex y place-items:center */
 }
 
 h1 {
