--- a/Frontend/getahotel/src/components/loginButton.css
+++ b/Frontend/getahotel/src/components/loginButton.css
@@ -9,7 +9,7 @@
   padding: 6px 12px !important;
   border: none !important;
   border-radius: 4px !important;
-  background: #007bff !important;
+  background: #ffaa00 !important;
   color: #ffffff !important; /* Texto blanco */
   cursor: pointer !important;
   font-size: 14px !important;
@@ -18,7 +18,7 @@
 }
 
 .login-btn:hover {
-  background: #0056b3 !important;
+  background: #be7f02 !important;
   border-color: transparent !important;
 }
 
@@ -97,7 +97,7 @@
   padding: 6px 12px !important;
   border: none !important;
   border-radius: 4px !important;
-  background: #28a745 !important; /* Verde para diferenciarlo */
+  background: #277fc9 !important; /* Verde para diferenciarlo */
   color: #ffffff !important;
   cursor: pointer !important;
   font-size: 14px !important;
@@ -111,7 +111,7 @@
 }
 
 .user-btn:hover {
-  background: #218838 !important;
+  background: #125a96 !important;
 }
 
 /* Contenedor relativo para el dropdown */
